--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="zh-cn">
 
 <head>
@@ -8,17 +8,16 @@
     <meta charset="utf-8"/>
     <meta name="description" content="dsp.hyperyoung.com,广告需求,精准投放"/>
     <meta name="keywords" content="哈尚,DSP,广告需求平台,精准投放,高效营销,策略投放"/>
-    <meta name="author" content="hewei">
+    <meta name="author" content="hewei"/>
     <link rel="shortcut icon" href="//assets.hyperyoung.com/images/sites_commom/favicon.ico" type="image/x-icon"/>
-    <link href="assets/css/dsp.css" type="text/css" rel="stylesheet"/>
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
+    <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body class="container">
-<section id="content-area" class="main-box container-box theme-default">
-    <!--<nav class="nav nav-top ">
 
-    </nav>-->
+<section id="content-area" class="main-box container-box theme-default">
+
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
             <div class="Carousel-Controller">
@@ -66,11 +65,14 @@
                 </span>
         </div>
     </footer>
+
 </section>
+
 <section id="scripts-area" style="display: none;">
-    <script src="" type="text/javascript">
-        console.log('ok');
-    </script>
+   <!-- <script src="#" type="text/javascript">
+    </script>-->
 </section>
+
 </body>
+
 </html>
