--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="哈尚,DSP,广告需求平台,精准投放,高效营销,策略投放"/>
     <meta name="author" content="hewei"/>
     <link rel="shortcut icon" href="//assets.hyperyoung.com/images/sites_commom/favicon.ico" type="image/x-icon"/>
-    <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
+    <link href="assets/css/style.min.css" type="text/css" rel="stylesheet"/>
     <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body class="container">
+<body id="root">
 
 <section id="content-area" class="main-box container-box theme-default">
-
+    <nav></nav>
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
             <div class="Carousel-Controller">
@@ -46,16 +46,16 @@
             </div>
         </div>
     </header>
-    <div class="area-">
+    <div class="area-wrap">
 
     </div>
-    <div class="area-">
+    <div class="area-wrap">
 
     </div>
-    <div class="area-">
+    <div class="area-wrap">
 
     </div>
-    <div class="area-">
+    <div class="area-wrap">
 
     </div>
     <footer>
@@ -68,10 +68,11 @@
 
 </section>
 
-<section id="scripts-area" style="display: none;">
-   <!-- <script src="#" type="text/javascript">
-    </script>-->
+<section id="scripts-area">
+    <script  type="text/javascript">
+    </script>
 </section>
+<section id="debug-area"></section>
 
 </body>
 
