--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="root">
 
 <section id="content-area" class="main-box container-box theme-default">
-    <nav></nav>
+    <nav class="nav theme-simple-one"></nav>
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
             <div class="Carousel-Controller">
@@ -72,7 +72,7 @@
     <script  type="text/javascript">
     </script>
 </section>
-<section id="debug-area"></section>
+<section id="debug-area" class="default"></section>
 
 </body>
 
