js framework make

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <link rel="shortcut icon" href="//assets.hyperyoung.com/images/sites_commom/favicon.ico" type="image/x-icon"/>
     <link href="assets/css/style.min.css" type="text/css" rel="stylesheet"/>
     <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/libs/app.js" type="text/javascript"></script>
 </head>
 
 <body id="root">
 
 <section id="content-area" class="main-box container-box theme-default">
-    <nav class="nav theme-simple-one"></nav>
+    <nav class="nav theme-simple-one">
+
+    </nav>
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
             <div class="Carousel-Controller">
@@ -28,18 +31,18 @@
                     <a class="btn center" href="javascript:void(0);"></a>
                 </div>
             </div>
-            <ul class="Carousel-items-group">
-                <li class="Carousel-item active">
+            <ul class="Carousel-items-default-group">
+                <li class="Carousel-item active red">
 
                 </li>
-                <li class="Carousel-item">
+                <li class="Carousel-item green">
 
                 </li>
-                <li class="Carousel-item">
+                <li class="Carousel-item yellow">
 
                 </li>
             </ul>
-            <div class="Carousel-item-tips">
+            <div class="Carousel-item-tips on">
                 <div class="tips"></div>
                 <div class="tips"></div>
                 <div class="tips"></div>
@@ -47,16 +50,16 @@
         </div>
     </header>
     <div class="area-wrap">
-
+        <img src="">
     </div>
     <div class="area-wrap">
-
+        <img src="">
     </div>
     <div class="area-wrap">
-
+        <img src="">
     </div>
     <div class="area-wrap">
-
+        <img src="">
     </div>
     <footer>
         <div class="copyright">
