--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <section id="content-area" class="main-box container-box theme-default">
     <nav class="nav theme-simple-one">
-
+            <div class="logo">
+                <img src="assets/images/v1/logo+font_420X95_white.png" class="nav-logo-img">
+            </div>
     </nav>
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
@@ -32,8 +34,8 @@
                 </div>
             </div>
             <ul class="Carousel-items-default-group">
-                <li class="Carousel-item active red">
-
+                <li class="Carousel-item active">
+                    <img src="assets/images/v1/BANNER.jpg" class="wrap-image">
                 </li>
                 <li class="Carousel-item green">
 
@@ -50,25 +52,65 @@
         </div>
     </header>
     <div class="area-wrap">
-        <img src="">
+        <img src="assets/images/v1/info.jpg" class="wrap-image">
     </div>
     <div class="area-wrap">
-        <img src="">
+        <div class="Carousel-container-box container-box">
+            <div class="Carousel-Controller">
+                <div class="Carousel-Controller-left prev">
+                    <a class="btn center" href="javascript:void(0);"></a>
+                </div>
+                <div class="Carousel-Controller-right next">
+                    <a class="btn center" href="javascript:void(0);"></a>
+                </div>
+            </div>
+            <ul class="Carousel-items-default-group">
+                <li class="Carousel-item white active">
+                    <img src="assets/images/v1/source_1.png" class="wrap-image">
+                </li>
+                <li class="Carousel-item white">
+                    <img src="assets/images/v1/source_2.png" class="wrap-image">
+                </li>
+            </ul>
+            <div class="Carousel-item-tips on">
+                <div class="tips"></div>
+                <div class="tips"></div>
+                <div class="tips"></div>
+            </div>
+        </div>
     </div>
     <div class="area-wrap">
-        <img src="">
+        <img src="assets/images/v1/4.png" class="wrap-image">
     </div>
-    <div class="area-wrap">
-        <img src="">
+    <div class="area-wrap" id="daily-ad-info">
+
+    </div>
+    <div class="area-wrap" id="company-with-test">
+        <div class="test-info">
+
+        </div>
+        <div class="company-info">
+
+        </div>
     </div>
     <footer>
         <div class="copyright">
-                <span class="line text">
-
-                </span>
+                <div class="line text font-white theme-copyright-size">
+                    <div class="align-center copyright-box">
+                        <div class="copyright-master">
+                            Copyright © 2000
+                            <a href="https://www.hyperyoung.com">hyperyoung</a>
+                            All Rights Reserved.
+                        </div>
+                        <div class="copyright-number">
+                            <a  href="http://www.miitbeian.gov.cn">
+                                粤ICP备16056525号-1
+                            </a>
+                        </div>
+                    </div>
+                </div>
         </div>
     </footer>
-
 </section>
 
 <section id="scripts-area">
