--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="area-wrap theme-advantage-bgcolor">
-        <img src="assets/images/v1/4.png" class="wrap-image">
+        <img src="assets/images/v1/advantage.png" class="wrap-image">
     </div>
     <div class="area-wrap" id="daily-ad-info">
         <div>
