--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </footer>
 </section>
 <section id="page-tools-area">
-        <div class="link-tools off">
+        <div class="link-tools">
              <a href="#page-top">
                     top
              </a>
