--- a/index.html
+++ b/index.html
@@ -86,18 +86,22 @@
     <div class="area-wrap theme-cwt-bgcolor" id="company-with-test">
         <div class="test-info center-box">
                 <div class="form center-box">
+
                     <div class="portrait center-box shape-circle theme-portrait">
                         <img src="assets/images/v1/portrait.png" class="center-box wrap-image shape-circle">
                     </div>
-
-                    <div class="input username center-box">
-                        ::username
+                    <div class="area-box center-box">
+                        <div class="input username center-box">
+                            ::username
+                        </div>
+                        <span class="small-tip h8 font-red relative"> 体验账号 [点击复制] </span>
                     </div>
-                    <span class="small-tip h8 font-red right"> 体验账号 [点击复制] </span>
-                    <div class="input password center-box">
-                        ::password
+                    <div class="area-box center-box">
+                        <div class="input password center-box">
+                            ::password
+                        </div>
+                        <span class="small-tip h8 font-red relative"> 体验账号密码 [点击复制] </span>
                     </div>
-                    <span class="small-tip h8 font-red right"> 体验账号密码 [点击复制] </span>
                     <a class="btn theme-btn-submit font-white center-box align-center" href="http://dsp.hyperyoung.com" target="_blank">
                             立即体验
                     </a>
