--- a/index.html
+++ b/index.html
@@ -92,25 +92,23 @@
                     </div>
                     <div class="area-box center-box">
                         <div class="input username center-box">
-                            ::username
+                            username
                         </div>
-                        <span class="small-tip h8 font-red relative"> 体验账号 [点击复制] </span>
                     </div>
                     <div class="area-box center-box">
                         <div class="input password center-box">
-                            ::password
+                            password
                         </div>
-                        <span class="small-tip h8 font-red relative"> 体验账号密码 [点击复制] </span>
                     </div>
-                    <a class="btn theme-btn-submit font-white center-box align-center" href="http://dsp.hyperyoung.com" target="_blank">
+                    <div class="btn theme-btn-submit font-white center-box align-center" onclick="$App.$helper('try-user')">
                             立即体验
-                    </a>
+                    </div>
                 </div>
         </div>
         <div class="company-info">
                 <div class="theme-content-box font-white">
                     <div class="company-name center-box align-center h4 strong">广州哈尚统领信息科技有限公司</div>
-                    <span class="logo-lang center-box align-center">华南地区品牌互动营销领先服务商</span>
+                    <span class="logo-lang center-box align-center h7">华南地区品牌互动营销领先服务商</span>
                     <div class="concat-us-info center-box">
                           <div class="mobile-phone-number center-box align-center h6">
                               商务: 183-2003-5975(推荐)
@@ -149,12 +147,12 @@
 </section>
 <section id="page-tools-area">
         <div class="link-tools">
-             <a href="#page-top">
+             <a href="#page-top" class="btn">
                     top
              </a>
-             <a href="javascript:$App.$menu('more');">
+             <div onclick="$App.$menu('more');" class="btn">
                     more
-             </a>
+             </div>
              <div class="more-menu off">
                  <a href="https://www.hyperyoung.com">
                      哈尚官网
@@ -162,9 +160,9 @@
                  <a href="http://dsp.hyperyoung.com">
                      体验dsp系统
                  </a>
-                 <a href="javascript:$App.$helper('custom-service');">
+                 <div onclick="$App.$helper('custom-service');">
                      客服咨询
-                 </a>
+                 </div>
              </div>
         </div>
 </section>
