index.html overview

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section id="content-area" class="main-box container-box theme-default">
     <nav class="nav theme-simple-one" id="page-top">
             <div class="logo">
-                <img src="assets/images/v1/logo+font_420X95_white.png" class="nav-logo-img">
+                <img src="assets/images/v1/logo_font_420X95_white.png" class="nav-logo-img">
             </div>
     </nav>
     <header class="header banner theme-alpha">
@@ -35,7 +35,7 @@
             </div>
             <ul class="Carousel-items-default-group">
                 <li class="Carousel-item theme-header-item-bgcolor-1 active">
-                    <img src="assets/images/v1/banner-mobile.png" class="wrap-image">
+                    <img src="assets/images/v1/banner-mobile.jpg" class="wrap-image">
                 </li>
                 <!--<li class="Carousel-item theme-header-item-bgcolor-2">
                 </li>-->
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="area-wrap theme-advantage-bgcolor">
-        <img src="assets/images/v1/4.png" class="wrap-image">
+        <img src="assets/images/v1/advantage.png" class="wrap-image">
     </div>
     <div class="area-wrap" id="daily-ad-info">
         <div>
@@ -92,15 +92,12 @@
                     <div class="portrait center-box shape-circle theme-portrait">
                         <img src="assets/images/v1/portrait.png" class="center-box wrap-image shape-circle">
                     </div>
-
                     <div class="input username center-box">
                         ::username
                     </div>
-                    <span class="small-tip h8 font-red"> 体验账号 [点击复制] </span>
                     <div class="small-tip input password center-box">
                         ::password
                     </div>
-                    <span class="h8 font-red"> 体验账号密码 [点击复制] </span>
                     <a class="btn theme-btn-submit font-white center-box align-center" href="http://dsp.hyperyoung.com" target="_blank">
                             立即体验
                     </a>
@@ -149,7 +146,7 @@
 
 <section id="page-tools-area">
         <div class="link-tools off">
-             <a href="#page-top">
+             <a href="#page-top>
                     top
              </a>
              <a href="javascript:$App.$menu('more');">
