--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                         <img src="assets/images/v1/portrait.png" class="center-box wrap-image shape-circle">
                     </div>
                     <div class="input username center-box">
-                        ::username
+                        username
                     </div>
                     <div class="small-tip input password center-box">
-                        ::password
+                        password
                     </div>
-                    <a class="btn theme-btn-submit font-white center-box align-center" href="http://dsp.hyperyoung.com" target="_blank">
+                    <div class="btn theme-btn-submit font-white center-box align-center" onclick="$App.$helper('try-dsp');">
                             立即体验
-                    </a>
+                    </div>
                 </div>
         </div>
         <div class="company-info">
