--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="company-info">
                 <div class="theme-content-box font-white">
                     <div class="company-name center-box align-center h4 strong">广州哈尚统领信息科技有限公司</div>
-                    <span class="logo-lang center-box align-center">华南地区品牌互动营销领先服务商</span>
+                    <span class="logo-lang center-box align-center h7">华南地区品牌互动营销领先服务商</span>
                     <div class="concat-us-info center-box">
                           <div class="mobile-phone-number center-box align-center h6">
                               商务: 183-2003-5975(推荐)
