--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                     <a class="btn center" href="javascript:void(0);"></a>
                 </div>
             </div>
-            <ul class="Carousel-items-default-group">
+            <ul class="Carousel-items-default-group" data-toggle="auto-off control-on">
                 <li class="Carousel-item theme-header-item-bgcolor-1 active">
-                    <img src="assets/images/v1/banner-mobile.jpg" class="wrap-image">
+                    <div class="center-box wrap-image">
+                        <img src="assets/images/v1/banner-mobile.jpg" class="wrap-image banner_one">
+                    </div>
                 </li>
                 <!--<li class="Carousel-item theme-header-item-bgcolor-2">
                 </li>-->
@@ -48,7 +50,9 @@
         </div>
     </header>
     <div class="area-wrap theme-info-bgcolor" >
-        <img src="assets/images/v1/info.jpg" class="wrap-image">
+        <div class="center-box wrap-image">
+            <img src="assets/images/v1/info.jpg" class="wrap-image img-media-size">
+        </div>
     </div>
     <div class="area-wrap mobile-content-auto theme-source-bgcolor">
         <div class="Carousel-container-box container-box mobile-off">
@@ -60,15 +64,21 @@
                     <a class="btn center" href="javascript:void(0);"></a>
                 </div>
             </div>
-            <ul class="Carousel-items-default-group mobile-off" data-mobile="1108">
+            <ul class="Carousel-items-default-group mobile-off" data-mobile="1108" data-toggle="auto-on control-on">
                 <li class="Carousel-item white active">
-                    <img src="assets/images/v1/source_1.png" class="wrap-image">
+                    <div class="center-box wrap-image theme-source-mobile-color">
+                        <img src="assets/images/v1/source_1.png" class="wrap-image img-media-size">
+                    </div>
                 </li>
                 <li class="Carousel-item white">
-                    <img src="assets/images/v1/source_2.png" class="wrap-image">
+                    <div class="center-box wrap-image">
+                        <img src="assets/images/v1/source_2.png" class="wrap-image img-media-size">
+                    </div>
                 </li>
                 <li class="Carousel-item">
-                    <img src="assets/images/v1/source_3.png" class="wrap-image">
+                    <div class="center-box wrap-image theme-source-platform-color">
+                        <img src="assets/images/v1/source_3.png" class="wrap-image img-media-size">
+                    </div>
                 </li>
             </ul>
             <div class="Carousel-item-tips on">
@@ -79,11 +89,36 @@
         </div>
     </div>
     <div class="area-wrap theme-advantage-bgcolor">
-        <img src="assets/images/v1/advantage.png" class="wrap-image">
+        <div class="center-box wrap-image theme-advantage-bgcolor">
+            <img src="assets/images/v1/advantage.png" class="wrap-image img-media-size">
+        </div>
     </div>
     <div class="area-wrap" id="daily-ad-info">
-        <div>
-
+        <div class="daily-data center-box">
+            <div class="center-box align-center domain-area">
+                <span class="clock"></span>
+                <span class="inline-box strong clock-tip">哈尚互动今日实时广告流量</span>
+                <span class="box domain-data">
+                     <i class="data-number nn0">2</i>
+                     <i class="data-number nn1">3</i>
+                     <i class="data-number nn2">1</i>
+                     <i class="data-number-flag">亿</i>
+                     <i class="data-number n0">6</i>
+                     <i class="data-number n1">7</i>
+                     <i class="data-number n2">8</i>
+                     <i class="data-number n3">9</i>
+                     <i class="data-number n4">3</i>
+                     <i class="data-number n5">7</i>
+                     <i class="data-number n6">8</i>
+                     <i class="data-number n7">6</i>
+                     <i class="data-number-flag">次</i>
+                </span>
+            </div>
+            <div class="area-box text-info">
+                <div class="strong h3 big-word-tip align-center">更多详情欢迎咨询广告顾问</div>
+                <div class="h7 align-center">我们很乐观向您展示可为贵公司提供的服务</div>
+                <div class="strong h3 concat-us-number align-center theme-font-green">联系方式 : 18320035975 </div>
+            </div>
         </div>
     </div>
     <div class="area-wrap theme-cwt-bgcolor" id="company-with-test">
