--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="Carousel-items-default-group" data-toggle="auto-off control-on">
                 <li class="Carousel-item theme-header-item-bgcolor-1 active">
                     <div class="center-box wrap-image">
-                        <img src="assets/images/v1/banner-mobile.jpg" class="wrap-image banner_one">
+                        <img src="assets/images/v1/banner-mobile.png" class="wrap-image banner_one">
                     </div>
                 </li>
                 <!--<li class="Carousel-item theme-header-item-bgcolor-2">
