--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="btn center" href="javascript:void(0);"></a>
                 </div>
             </div>-->
-            <ul class="Carousel-items-default-group" data-toggle="auto-off control-on">
+            <ul class="Carousel-items-default-group Carousel-items-group-toggle" data-toggle="auto-off control-on">
                 <li class="Carousel-item theme-header-item-bgcolor-1 active">
                     <div class="center-box wrap-image banner">
                         <img src="assets/images/v1/banner-mobile.png" class="wrap-image banner_one mobile-on">
