quick develop mode

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="author" content="hewei"/>
     <link rel="shortcut icon" href="//assets.hyperyoung.com/images/sites_commom/favicon.ico" type="image/x-icon"/>
     <link href="assets/css/style.min.css" type="text/css" rel="stylesheet"/>
-    <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <!--< 浏览器能力检测 modernizr.js  >-->
+    <script src="https://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body id="root">
@@ -24,14 +25,7 @@
     </nav>
     <header class="header banner theme-alpha">
         <div class="Carousel-container-box container-box">
-            <!--<div class="Carousel-Controller">
-                <div class="Carousel-Controller-left prev">
-                    <a class="btn center" href="javascript:void(0);"></a>
-                </div>
-                <div class="Carousel-Controller-right next">
-                    <a class="btn center" href="javascript:void(0);"></a>
-                </div>
-            </div>-->
+
             <ul class="Carousel-items-default-group Carousel-items-group-toggle" data-toggle="auto-off control-on">
                 <li class="Carousel-item theme-header-item-bgcolor-1 active">
                     <div class="center-box wrap-image banner">
@@ -39,14 +33,7 @@
                         <img src="assets/images/v1/banner-pc.png" class="wrap-image banner_one pc-on">
                     </div>
                 </li>
-                <!--<li class="Carousel-item theme-header-item-bgcolor-2">
-                </li>-->
             </ul>
-           <!-- <div class="Carousel-item-tips off">
-                <div class="tips"></div>
-                <div class="tips"></div>
-                <div class="tips"></div>
-            </div>-->
         </div>
     </header>
     <div class="area-wrap theme-info-bgcolor" >
