--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="assets/css/style.min.css" type="text/css" rel="stylesheet"/>
     <!--< 浏览器能力检测 modernizr.js  >-->
     <script src="https://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body id="root">
@@ -34,6 +35,7 @@
                     </div>
                 </li>
             </ul>
+
         </div>
     </header>
     <div class="area-wrap theme-info-bgcolor" >
@@ -198,7 +200,18 @@
     <script src="assets/libs/app.js" type="text/javascript"></script>
 </section>
 <section id="debug-area" class="default"></section>
+<section id="model-area" class="container-box off">
 
+        <div class="model-box mobile-on">
+               <div class="content-box">
+                   <span class="close btn mobile-type"> x </span>
+                   <div class="content">
+
+                   </div>
+               </div>
+        </div>
+
+</section>
 </body>
 
 </html>
